# isoext

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  diff_voxel_ext.cpp  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  pip.yml  wheels.yml
doc/: _viz.py  api.md  conf.py  dual_contouring.ipynb  grids.ipynb  index.md  installation.md  marching_cubes.ipynb  more_sdf.ipynb  occupancy_grids.ipynb  quickstart.ipynb
doc/_build/html/: .buildinfo  api.html  dual_contouring.html  genindex.html  grids.html  index.html  installation.html  marching_cubes.html  more_sdf.html  objects.inv  occupancy_grids.html  quickstart.html  sdf_guide.html  search.html  searchindex.js
doc/_build/html/.doctrees/: api.doctree  dual_contouring.doctree  environment.pickle  grids.doctree  index.doctree  installation.doctree  marching_cubes.doctree  more_sdf.doctree  occupancy_grids.doctree  quickstart.doctree  sdf_guide.doctree
doc/_build/html/_sources/: index.md.txt  marching_cubes.ipynb.txt  quickstart.ipynb.txt  sdf_guide.ipynb.txt
include/: batched_la.cuh  common.cuh  dc.cuh  its.cuh  lorensen.cuh  lut.cuh  math.cuh  mc.cuh  mc_base.cuh  mc_lorensen.cuh  mc_nagae.cuh  nagae.cuh  ndarray.cuh  ndarray_types.cuh  shared_luts.cuh  utils.cuh
include/grid/: grid.cuh  sparse.cuh  uniform.cuh
include/lib/: lorensen.cuh  math.cuh  mc.cuh
include/mc/: base.cuh  lorensen.cuh  mc.cuh  nagae.cuh
luts/: gen_mc_lut.py
luts/mc_methods/: lorensen.json  nagae.json
src/: CMakeLists.txt  batch_la.cu  batched_la.cu  common.cu  dc.cu  diff_voxel_ext.cpp  isoext_ext.cpp  isoext_ext.cu  its.cu  lorensen.cu  lut.cu  mc.cu  mc_base.cu  mc_lorensen.cu  mc_nagae.cu  nagae.cu  ndarray.cu  shared_luts.cu  test.cpp  utils.cu
src/diff_voxel/: __init__.py
src/grid/: sparse.cu  uniform.cu
src/isoext/: __init__.py  sdf.py  utils.py
src/lib/: CMakeLists.txt  lorensen.cu
src/mc/: base.cu  lorensen.cu  mc.cu  nagae.cu
tests/: conftest.py  test_basic.py  test_dual_contouring.py  test_grid_utils.py  test_integration.py  test_marching_cubes.py  test_sdf_operations.py  test_sdf_primitives.py  test_sdf_utils.py
third_party_licenses/: README.md
