[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "isoext"
version = "0.5.1"
description = "A collection of algorithms for iso-surface extraction on GPU. Supports pytorch."
readme = "README.md"
requires-python = ">=3.8,<3.13"
authors = [{ name = "Guangyan Cai", email = "gcai3@uci.edu" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

[project.urls]
Homepage = "https://github.com/GuangyanCai/isoext"
Documentation = "https://github.com/GuangyanCai/isoext/wiki"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
isoext = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.dev.dependencies]
ruff = "*"
numpy = "*"
pytest = "*"

[tool.pixi.feature.dev.tasks]
test = { cmd = "pytest tests/", cwd = "."}

[tool.pixi.feature.cu128.pypi-dependencies]
torch = { index = "https://download.pytorch.org/whl/cu128" }

[tool.pixi.feature.doc.pypi-dependencies]
sphinx = "*"
sphinx-autobuild = "*"
furo = "*"
myst-nb = "*"
ipywidgets = "*"
jupyterlab = "*"
pyvista = { version = "*", extras = ["jupyter"] }

[tool.pixi.feature.doc.tasks]
doc-build = { cmd = "sphinx-build -b html . _build/html", cwd = "doc" }
doc-serve = { cmd = "sphinx-autobuild . _build/html --open-browser --watch ../src", cwd = "doc" }
doc-clean = { cmd = "rm -rf _build", cwd = "doc" }
doc-rebuild = { cmd = "rm -rf _build && sphinx-build -b html . _build/html", cwd = "doc" }
doc-lab = { cmd = "jupyter lab", cwd = "doc" }

[tool.pixi.environments]
dev = { features = ["dev"] }
cu128 = { features = ["dev", "cu128"] }
doc = { features = ["doc", "cu128"] }

